--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -2,6 +2,7 @@
     <div class="row">
         <div class="col bg-dark text-white">
             <a class="navbar-brand">SPORT STORE</a>
+            <cart-summary></cart-summary>
         </div>
     </div>
     <div class="row">
@@ -22,7 +23,13 @@
                         {{ product.price | currency:"USD":"symbol":"2.2-2"}}
                     </span>
                 </h4>
-                <div class="card-text bg-white p-1">{{product.description}}</div>
+                <div class="card-text bg-white p-1">
+                    {{product.description}}
+                    <button class="btn btn-success btn-sm float-right"
+                            (click)="addProductToCart(product)">
+                        Add To Cart
+                    </button>
+                </div>
             </div>
     
             <div class="form-inline float-left mr-1">
@@ -35,13 +42,13 @@
                 </select>
             </div>
     
-        <div class="btn-group float-right">
-            <button *counter="let page of pageNumbers" (click)="changePage(page)"
-                    class="changePage(page)"
-                    [class.active]="page == selectedPage">
-                {{page}}
-            </button>
-        </div>
+            <div class="btn-group float-right">
+                <button *counter="let page of pageCount" (click)="changePage(page)"
+                    class="btn btn-outline-primary" [class.active]="page == selectedPage">
+                  {{page}}
+                </button>
+            </div>
+
     </div>
     </div>
 </div>
